# Bolt

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
KoTeur-VS2017/: KoTeur.sln
KoTeur-VS2017/KoTeur/: KoTeur.vcxproj  KoTeur.vcxproj.filters  test.xml
Mockups/: BoltEditor.epgz  EntityModelStuff.cpp  EntityModelStuff.h  Qt.Models.TreeWrapper.cpp
Research/Interface/: BoltEditor.epgz
Research/Qt.Models.TreeWrapper/: Qt.Models.TreeWrapper.h
ResearchDoc/Interface/: interface_full_sketch.tvpp
Windows/: README.txt  copyDLLs.bat  deploy_all.bat  deploy_core.bat  deploy_editor.bat  fix_install.bat  full_clean.bat  help.bat  prebuild_core.bat  prebuild_editor.bat  quick_clean.bat  setup.bat  updatex.bat
Windows/BoltCore-VS2017/: BoltCore.sln  BoltCore.vcxproj  BoltCore.vcxproj.filters
Windows/BoltCore-VS2017/BoltCore/: BoltCore.sln  BoltCore.vcxproj  BoltCore.vcxproj.filters  shortcuts.xml  test.xml
Windows/BoltEditor-VS2017/: BoltEditor.sln  BoltEditor.vcxproj  BoltEditor.vcxproj.filters
Windows/Editor-VS2017/BoltEditor/: BoltEditor.sln
Windows/_tools/: RULES.txt  _ask_confirm.bat  _initboltenv.bat  _initboltshell.bat  _smart_cp.bat  cp_resources.bat
Windows/_tools/_git/: _checkgitstatus.bat  _initgitsubmodules.bat
Windows/_tools/_msvc/: _init_msvc.bat
Windows/_tools/_prebuild/: _clean_res_hash.bat  _res_hash_check.bat
Windows/_tools/_qt/: _ask_qtpath.bat  _init_qtpath.bat
Windows/_tools/_setup/: _buildextlibs.bat  _install_core.bat  _install_editor.bat  _install_ext_res.bat
cMake/: Win32Config.cmake
cmake/: utils.cmake
cmake/modules/: FindPythonLibs.cmake  FindTinyXML2.cmake
cmake/platform/: linux.cmake  windows.cmake
resources/Core/: shortcuts.ini
resources/Core/Entities/: Bullet.entity  Demo.entity  entityA.entity  entityB.entity
resources/Editor/: BoltEditor.qrc  MainWindowTest.ui
resources/Editor/css-themes/: style.qss  style.qss.bak
resources/Editor/icons/: icons.tvpp
resources/Editor/monaco-editor/: LICENSE-details
resources/Entities/: entityA.entity  test.entity
resources/ProjectTest/: ProjectTest.proj
resources/ProjectTest/Screens/: GameScreen.screen  ScreenDeux.screen
resources/ProjectTestEditor/: Test.proj  main.py
resources/ProjectTestEditor/Screens/: Premier.screen
resources/Shared/BoltPython/: sample.py
resources/Shared/Shaders/: BoxBlurHorizontal.frag  BoxBlurVertical.frag  basicLight.vert  couleur3D.frag  couleur3D.vert  template.vert
src/: main.cpp
src/Application/: Application.cpp  Application.h
src/Base/: Clipboard.cpp  Clipboard.h  ClipboardWin32.cpp  Drawable.cpp  Drawable.h  GeneralEnums.h  ResourceManager.cpp  ResourceManager.h
src/Benchmark/: Benchmark.cpp  Benchmark.h
src/BoltScript/: BoltScriptEnvironment.cpp  BoltScriptEnvironment.h
src/Core/: Core.main.cpp  main.cpp
src/Core/AI/: AI.BehaviourNode.cpp  AI.BehaviourNode.h  AI.BehaviourService.cpp  AI.BehaviourService.h  AI.BehaviourTree.cpp  AI.BehaviourTree.h  AI.BlackBoard.cpp  AI.BlackBoard.h  AI.BlackBoardVariable.cpp  AI.BlackBoardVariable.h  Core.AI.BehaviourNode.cpp  Core.AI.BehaviourNode.h  Core.AI.BehaviourService.cpp  Core.AI.BehaviourService.h  Core.AI.BehaviourTree.cpp  Core.AI.BehaviourTree.h  Core.AI.BlackBoard.cpp  Core.AI.BlackBoard.h  Core.AI.BlackBoardVariable.cpp  Core.AI.BlackBoardVariable.h
src/Core/Animation/: Core.Animation.Animation.cpp  Core.Animation.Animation.h
src/Core/Application/: Application.cpp  Application.h  Core.Application.Application.cpp  Core.Application.Application.h  Core.Application.GlobalAccess.cpp  Core.Application.GlobalAccess.h
src/Core/Base/: Clipboard.cpp  Clipboard.h  ClipboardWin32.cpp  Core.Base.Clipboard.cpp  Core.Base.Clipboard.h  Core.Base.ClipboardWin32.cpp  Core.Base.CommonIncludes.h  Core.Base.Drawable.cpp  Core.Base.Drawable.h  Core.Base.FileSystem.h  Core.Base.GeneralDefinitions.h  Core.Base.GeneralEnums.h  Core.Base.ResourceManager.cpp  Core.Base.ResourceManager.h  Core.Base.Utilities.cpp  Core.Base.Utilities.h  Core.Base.Variant.cpp  Core.Base.Variant.h  Drawable.cpp  GeneralEnums.h  ResourceManager.cpp  Thread-BasicProcessor.cpp  Thread-BasicProcessor.h  Thread-ParallelThread.cpp  Thread-ParallelThread.h  Thread-Thread.cpp  Thread-Thread.h  Thread-ThreadProcessor.cpp  Thread-ThreadProcessor.h  Thread-TriangleSpliterProcessor.cpp  Thread-TriangleSpliterProcessor.h  Utilities.cpp  Utilities.h  Variant  Variant.cpp  Variant.h
src/Core/Benchmark/: Benchmark.cpp  Benchmark.h  Core.Benchmark.cpp  Core.Benchmark.h
src/Core/BoltScript/: BoltScriptEnvironment.cpp  BoltScriptEnvironment.h  Core.BoltScript.BoltScriptEnvironment.cpp  Core.BoltScript.BoltScriptEnvironment.h
src/Core/ECS/: Core.ECS.Core.GlobalEntityMap.cpp  Core.ECS.Core.GlobalEntityMap.h  Core.ECS.Core.ScreenEntityMap.cpp  Core.ECS.Core.ScreenEntityMap.h
src/Core/GUI/: ConsoleWidget.cpp  ConsoleWidget.h  Core.GUI.ConsoleWidget.cpp  Core.GUI.ConsoleWidget.h
src/Core/GameMockup/: ConsoleScreen.cpp  ConsoleScreen.h  GameApplication.cpp  GameApplication.h  GameScreen.cpp  GameScreen.h  InfiltratorScreen.cpp  InfiltratorScreen.h  OpenGLRenderSceneScreen.cpp  OpenGLRenderSceneScreen.h
src/Core/MainMenu/: Core.MainMenu.ItemCallback.cpp  Core.MainMenu.ItemCallback.h  Core.MainMenu.ItemPageSwaper.cpp  Core.MainMenu.ItemPageSwaper.h  Core.MainMenu.MainMenu.cpp  Core.MainMenu.MainMenu.h  Core.MainMenu.MenuItem.cpp  MainMenu.cpp  (+4 more)
src/ECS/: Component.cpp  Component.h  ComponentRegistry.cpp  ComponentRegistry.h  Entity.cpp  Entity.h  EntityParser.cpp  EntityParser.h  System.cpp  System.h  World.cpp  World.h
src/Editor/: Editor.main.cpp  editormain.cpp
src/GUI/: ConsoleWidget.cpp  ConsoleWidget.h
src/GameMockup/: ConsoleScreen.cpp  ConsoleScreen.h  GameApplication.cpp  GameApplication.h  GameScreen.cpp  GameScreen.h
src/MainMenu/: MainMenu.cpp  MainMenu.h
src/Mapping/: PhysicEntityGrid.cpp  PhysicEntityGrid.h
src/Math/: Rectangle.cpp  Rectangle.h  Utils.cpp  Vector2d.cpp  Vector2d.h
src/Screen/: Screen.cpp  Screen.h  ScreenMainMenu.cpp  ScreenMainMenu.h
src/Shortcuts/: Shortcuts.cpp  Shortcuts.h
(+701 files in other folders)
